# dotclaude

./: .gitignore  README.md  pyproject.toml
.claude/docs/: architecture.md  backlog-archive.md  backlog.md  decisions.md  ideas.md  later.md
.claude/docs/specs/: 2026-04-10-dotclaude-plugin-nucleus-architecture.md  2026-04-10-dotclaude-yoshinoid-flagship-alignment.md  2026-04-10-yoshinoid-meta-agent-phase-0.md  2026-04-11-infinite-wait-loop-prevention.md  2026-04-11-yoshinoid-phase-0-implementation-plan.md
src/dotclaude/: __init__.py  cli.py  models.py
src/dotclaude/commands/: analyze.py  config.py  format.py  insights.py  login.py  pull.py  register.py  serve.py  sync.py  team.py
src/dotclaude/display/: __init__.py  dashboard.py  formatters.py  html_report.py
src/dotclaude/insights/: __init__.py  anonymize.py  config_store.py  gemini.py  locale.py  merge.py  prompts.py  recommendations.py  server_recommendations.py  signals.py
src/dotclaude/parser/: __init__.py  pricing.py  scanner.py  utils.py
src/dotclaude/parser/parsers/: configs.py  conversations.py  history.py  plugins.py  process_sessions.py  projects.py  settings.py  subagents.py
src/dotclaude/utils/: __init__.py  api_client.py  file_writer.py
tests/: conftest.py  test_models.py  test_smoke.py
tests/cli/: test_evolve.py  test_format.py  test_formatters.py  test_pull.py  test_sync_knowledge.py  test_team.py  test_workflow.py
tests/insights/: test_recommendations.py  test_signals.py
tests/parser/: test_analyze.py  test_conversations.py  test_utils.py
