[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dotclaude"
version = "0.4.0"
description = "Analyze and visualize your Claude Code usage patterns"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Jeonghwan Hwang" },
]
keywords = ["claude", "claude-code", "analyzer", "cli", "usage"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "dotclaude-types>=0.1.0",
    "dotclaude-rag>=0.1.0",
    "typer>=0.12",
    "rich>=13.0",
    "pydantic>=2.7",
    "orjson>=3.10",
    "httpx>=0.27",
]

[project.scripts]
dotclaude = "dotclaude.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dotclaude"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
